--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.9.1",
+    "axios": "^0.21.0",
+    "axios-observable": "^1.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
