--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.9.1",
     "axios": "^0.21.0",
     "axios-observable": "^1.1.3",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.167",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
